# release-plz

./: .gitignore  .lycheeignore  404.html  CHANGELOG.md  CONFIGURATIN.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODO.md  action.yml  blog.html  clippy.toml  deny.toml  docs.html  flake.nix  index.html  k-releaser.toml  lychee.toml  pricing.html  quickstart_code.html  release-plz.toml  search-index.json  search.html  sitemap.xml
.devcontainer/: devcontainer.json
.github/: renovate.json5
.github/workflows/: cargo-assist.yml  cd.yml  ci.yml  deny.yml  docker-develop.yml  docker.yml  links.yml  pr-links.yml  release-plz.yml  release.yml  test.yml  website-cd.yml  website-ci.yml  zizmor.yml
.schema/: README.md  latest.json
assets/css/: styles.2759b9c7.css  styles.9b20c2e7.css  styles.a1506eb9.css  styles.a87c4874.css  styles.aaf6e6fb.css  styles.b7d958f5.css  styles.bd5625ce.css  styles.e74041d9.css  styles.f5f4c503.css
assets/js/: 0058b4c6.04413a74.js  0058b4c6.4d011c28.js  0058b4c6.64711aba.js  0058b4c6.8e79a0e2.js  0058b4c6.9ca42a42.js  00add36a.088db4f4.js  00add36a.631c631d.js  00add36a.66407f8b.js  00add36a.9fde8353.js  00add36a.d59d60e3.js  03fffe4d.18831b61.js  03fffe4d.44de0651.js  03fffe4d.4a751c2a.js  03fffe4d.6ead4d1b.js  03fffe4d.a1d59c45.js  03fffe4d.a6a6cad9.js  03fffe4d.ade1e40a.js  0480b142.075d57f5.js  0480b142.0e725a55.js  0480b142.2871f317.js  0480b142.4b411788.js  0480b142.8adc321f.js  0480b142.afe10ebf.js  0480b142.dceb261e.js  088fadd7.29988aad.js  088fadd7.582c78e1.js  088fadd7.618879b2.js  088fadd7.6e1a973e.js  088fadd7.74af188d.js  088fadd7.917c1640.js  088fadd7.998567b3.js  088fadd7.ab0fd383.js  088fadd7.e77fb73d.js  088fadd7.f0cedd9a.js  088fadd7.fd02df83.js  0e384e19.04c70b24.js  0e384e19.09eedcf9.js  0e384e19.1a511a87.js  0e384e19.6913fb9e.js  0e384e19.92443fb0.js  (+655 more)
contributions/: README_issue_1887.md
crates/cargo_utils/: CHANGELOG.md  Cargo.toml
crates/cargo_utils/src/: cargo.rs  lib.rs  local_manifest.rs  manifest.rs  registry.rs  token.rs  version.rs  workspace_members.rs
crates/fake_package/: Cargo.toml
crates/fake_package/src/: dependency.rs  metadata.rs
crates/git_cmd/: CHANGELOG.md  Cargo.toml  README.md
crates/git_cmd/src/: cmd.rs  lib.rs  test_fixture.rs
crates/k_releaser/: Cargo.toml
crates/k_releaser/src/: changelog_config.rs  config.rs  log.rs  main.rs  update_checker.rs
crates/k_releaser/src/args/: config_path.rs  manifest_command.rs  mod.rs  publish.rs  release.rs  release_pr.rs  repo_command.rs  set_version.rs  update.rs
crates/k_releaser/src/init/: mod.rs
crates/k_releaser/tests/all/: changelog.rs  main.rs  release.rs  release_pr.rs  set_version.rs
crates/k_releaser_core/: CHANGELOG.md  Cargo.toml
crates/k_releaser_core/src/: cargo.rs  diff.rs  fs_utils.rs  http_client.rs  lib.rs  next_ver.rs  package_path.rs  pr.rs  pr_parser.rs  project.rs  registry_packages.rs  release_order.rs  repo_url.rs  response_ext.rs  tera.rs  tmp_repo.rs  version.rs
crates/k_releaser_core/src/clone/: cloner_builder.rs  source.rs
crates/k_releaser_core/src/command/: mod.rs  publish.rs  release.rs
crates/k_releaser_core/src/command/update/: mod.rs  package_dependencies.rs  update_config.rs  update_request.rs  updater.rs
crates/k_releaser_core/src/git/: gitea_client.rs  gitlab_client.rs  mod.rs
crates/k_releaser_core/tests/all/: release_pr.rs  update.rs
crates/k_releaser_core/tests/all/helpers/: comparison_test.rs
crates/next_version/: CHANGELOG.md  Cargo.toml
crates/next_version/src/: lib.rs  next_version.rs  version_increment.rs  version_updater.rs
crates/next_version/tests/all/: normal.rs
crates/release_plz/: Cargo.toml
crates/release_plz/src/: changelog_config.rs  commands.rs  config.rs  generate_schema.rs  log.rs  main.rs  update_checker.rs
crates/release_plz/src/args/: config_command.rs  config_path.rs  init.rs  mod.rs  release.rs  (+4 more)
crates/release_plz_core/: CHANGELOG.md  Cargo.toml
crates/release_plz_core/src/: cargo.rs  cargo_hash_kind.rs  changelog.rs  changelog_filler.rs  changelog_parser.rs  copy_dir.rs  diff.rs  download.rs  http_client.rs  lib.rs  next_ver.rs  package_compare.rs  package_path.rs  pr.rs  project.rs  published_packages.rs  registry_packages.rs  release_order.rs  release_regex.rs  repo_url.rs  response_ext.rs  semver_check.rs  tera.rs  toml_compare.rs  user_agent.rs  version.rs
crates/test_logs/: CHANGELOG.md  Cargo.toml
crates/test_logs/src/: lib.rs
docs/: assets.html  changelog.html  config.html  extra.html  faq.html  github.html  gitlab.html  media.html  release-plz-in-the-wild.html  semver-check.html  troubleshooting.html  usage.html  why.html
docs/changelog/: examples.html  format.html  tips-and-tricks.html
docs/extra/: releasing-binaries.html  single-changelog.html  single-job-workflow.html  single-tag.html  yanked-packages.html
docs/github/: advanced.html  input.html  output.html  persist-credentials.html  quickstart.html  security.html  token.html  update.html
docs/usage/: generate-schema.html  init.html  installation.html  release-pr.html  release.html  set-version.html  shell-completion.html  update.html
tests/: docker-compose.yml
tests/fixtures/non-standard-license/: Cargo.toml
tests/fixtures/set-version-in-package/: Cargo.toml
tests/fixtures/set-version-in-workspace/: Cargo.toml
tests/fixtures/typo-in-overrides/: Cargo.toml
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: config.md  faq.md  gitlab.md  intro.md  release-plz-in-the-wild.md  release-plz-in-the-wild.mdx  troubleshooting.md
website/docs/changelog/: examples.md  format.md
website/docs/extra/: releasing-binaries.md  single-changelog.md  single-job-workflow.md
website/docs/github/: advanced.md  input.md  output.md  persist-credentials.md  quickstart.md  security.md  signed-tags.md  token.md
website/docs/usage/: generate-schema.md  index.md  release-pr.md  release.md  set-version.md
website/src/: fetch-famous-projects.ts
website/src/data/: famous-projects.json  feedback.tsx
website/src/pages/: index.tsx  pricing.md
(+70 files in other folders)
