[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.99"
assert_cmd = "2.0.17"
base64 = "0.22.1"
camino = "1.1.12"
cargo_metadata = "0.23.0"
cargo = { version = "0.92.0", default-features = false }
chrono = { version = "0.4.42", default-features = false }
clap = "4.5.47"
clap_complete = "4.5.57"
crates-index = { version = "3.11.0", features = ["git", "sparse", "git-https"] }
dirs = "6.0.0"
dunce = "1.0.5"
expect-test = "1.5.1"
fake = "4.4.0"
fs-err = "3.1.1"
git-cliff-core = { version = "2.10.0", default-features = false }
git-conventional = "0.12.9"
git-url-parse = "0.6.0"
h2 = "0.4"
http = "1.3.1"
ignore = "0.4.23"
itertools = "0.14.0"
parse-changelog = { version = "0.6.13", default-features = false }
pretty_assertions = "1.4.1"
rayon = "1.11.0"
rand = "0.9.2"
regex = "1.11.2"
reqwest = "0.12.23"
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.8.0"
schemars = { version = "1.0.4", features = ["url2"] }
secrecy = "0.10.3"
semver = "1.0.26"
serde = "1.0.219"
serde_json = "1.0.143"
strip-ansi-escapes = "0.2.1"
tempfile = "3.22.0"
tera = "1.20.0"
tokio = "1.47.1"
toml = { version = "0.9.5" }
toml_edit = { version = "0.23.4" }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
url = "2.5.7"
urlencoding = "2.1.3"
walkdir = "2.5.0"
wiremock = "0.6.5"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
explicit_outlives_requirements = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unsafe_attr_outside_unsafe = "warn"
unused = "warn"
unused_import_braces = "warn"

[workspace.lints.clippy]
as_underscore = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
cargo_common_metadata = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
default_trait_access = "warn"
doc_markdown = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filetype_is_file = "warn"
filter_map_next = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
get_unwrap = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_underscore_must_use = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ignore_case_cmp = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
map_all_any_identity = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_with_unused_argument_over_ranges = "warn"
match_bool = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mut_mut = "warn"
needless_as_bytes = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
ref_option_ref = "warn"
regex_creation_in_loops = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
trait_duplication_in_bounds = "warn"
trivially_copy_pass_by_ref = "warn"
type_repetition_in_bounds = "warn"
unicode_not_nfc = "warn"
uninlined_format_args = "warn"
unnecessary_literal_bound = "warn"
unnecessary_map_or = "warn"
unneeded_field_pattern = "warn"
unreadable_literal = "warn"
unsafe_derive_deserialize = "warn"
unseparated_literal_suffix = "warn"
unused_self = "warn"
use_self = "warn"
used_underscore_binding = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

# Allowing optional lints has no effect, but we list them to
# make clear that we reviewed them and we decided to allow them
arbitrary_source_item_ordering = "allow"
decimal_literal_representation = "allow"
map_unwrap_or = "allow"
needless_raw_string_hashes = "allow"
redundant_else = "allow"
