[package]
name = "cargo_utils"
version.workspace = true
edition.workspace = true
description = "Utilities around cargo and Rust workspaces"
repository.workspace = true
license.workspace = true
keywords = ["cargo", "utilities", "utils", "workspace"]
categories.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
dirs.workspace = true
dunce.workspace = true
fs-err.workspace = true
toml.workspace = true
toml_edit.workspace = true
semver.workspace = true
url.workspace = true
serde.workspace = true
secrecy.workspace = true

[dev-dependencies]
expect-test.workspace = true
