[package]
name = "git_cmd"
version.workspace = true
edition.workspace = true
description = "Wrapper around git cli"
repository.workspace = true
license.workspace = true
keywords = ["git", "command", "cli", "wrapper", "shell"]
categories = ["development-tools", "filesystem"]

[features]
test_fixture = []

[dependencies]
anyhow.workspace = true
camino.workspace = true
tracing.workspace = true
fs-err.workspace = true

[dev-dependencies]
git_cmd = { workspace = true, features = ["test_fixture"] }
test_logs.workspace = true
tempfile.workspace = true
