[package]
name = "k_releaser_core"
version.workspace = true
edition.workspace = true
description = "Update version and changelog based on semantic versioning and conventional commits"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["all-static"]
all-static = ["cargo/vendored-libgit2", "cargo/all-static"]

[dependencies]
base64.workspace = true
cargo_utils.workspace = true
git_cmd.workspace = true
next_version.workspace = true

anyhow.workspace = true
cargo_metadata.workspace = true
cargo.workspace = true
chrono = { workspace = true, features = ["clock"] }
crates-index.workspace = true
dunce.workspace = true
fs-err = { workspace = true, features = ["tokio"] }
git-cliff-core.workspace = true
git-url-parse.workspace = true
h2.workspace = true
ignore.workspace = true
itertools.workspace = true
parse-changelog.workspace = true
rand.workspace = true
rayon.workspace = true
regex.workspace = true
# native-tls-alpn is needed for http2 support. https://doc.rust-lang.org/cargo/reference/registry-index.html#sparse-protocol
reqwest = { workspace = true, features = ["json", "gzip", "rustls"] }
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true
toml.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
walkdir.workspace = true
toml_edit.workspace = true
serde_json.workspace = true
strip-ansi-escapes.workspace = true
tokio = { workspace = true, features = ["fs", "macros"] }
tera.workspace = true
http.workspace = true
urlencoding.workspace = true

[dev-dependencies]
git_cmd = { workspace = true, features = ["test_fixture"] }
test_logs.workspace = true
fake_package.workspace = true

expect-test.workspace = true
fake.workspace = true
tokio = { workspace = true, features = ["macros"] }
wiremock.workspace = true
