[package]
name = "next_version"
version = "0.2.24"
edition.workspace = true
description = "Determine next semantic version based on conventional commits"
license.workspace = true
repository = "https://github.com/release-plz/release-plz/tree/main/crates/next_version"
keywords = ["semver", "semantic", "versioning", "conventional", "commits"]
categories = ["development-tools", "parsing"]

[lints]
workspace = true

[dependencies]
regex.workspace = true
semver.workspace = true
git-conventional.workspace = true
