[package]
name = "next_version"
version.workspace = true
edition.workspace = true
description = "Determine next semantic version based on conventional commits"
license.workspace = true
repository.workspace = true
keywords = ["semver", "semantic", "versioning", "conventional", "commits"]
categories = ["development-tools", "parsing"]

[dependencies]
regex.workspace = true
semver.workspace = true
git-conventional.workspace = true
