[package]
name = "test_logs"
version.workspace = true
edition.workspace = true
description = "Library to see logs in tests"
license.workspace = true
repository.workspace = true
keywords = ["test", "logs", "tracing"]
categories = ["development-tools", "development-tools::testing"]

[lints]
workspace = true

[dependencies]
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
